[gd_scene load_steps=3 format=3 uid="uid://cspc1230j2yw1"]

[ext_resource type="Script" path="res://Node2D.gd" id="1_lxutf"]
[ext_resource type="Texture2D" uid="uid://ipb1yvhlw0e7" path="res://colorful-clouds-skydusk-sunset-sky-600nw-2477429939.webp" id="2_0e3nj"]

[node name="Menú" type="Node2D"]
script = ExtResource("1_lxutf")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(573, 324.5)
scale = Vector2(1.93, 1.95495)
texture = ExtResource("2_0e3nj")

[node name="Intrucciones" type="Button" parent="."]
offset_left = 517.0
offset_top = 292.0
offset_right = 629.0
offset_bottom = 323.0
text = "Instrucciones"

[node name="Créditos" type="Button" parent="."]
offset_left = 529.0
offset_top = 337.0
offset_right = 617.0
offset_bottom = 368.0
text = "Créditos"

[node name="Jugar" type="Button" parent="."]
offset_left = 549.0
offset_top = 243.0
offset_right = 598.0
offset_bottom = 274.0
text = "Jugar"

[connection signal="pressed" from="Intrucciones" to="." method="_on_intrucciones_pressed"]
[connection signal="pressed" from="Créditos" to="." method="_on_créditos_pressed"]
[connection signal="pressed" from="Jugar" to="." method="_on_jugar_pressed"]
